--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   
           <td style="width:50%; text-align:left;">
             <h1 style="margin:0; margin-top: 50px; font-size:36px;">Shubham Gandhi</h1>
-            <p style="margin:2px 0; font-size:17px; font-weight:bold;">Dual Master's candidate at Cornell University</p>
+            <p style="margin:2px 0; font-size:15px; font-weight:bold;">Dual Master's Candidate at Cornell University (May 2026)</p>
   
             <p style="margin:2px 0; font-size:15px;">
               <a href="https://tech.cornell.edu" style="color:#1772d0; text-decoration:none;">
@@ -70,7 +70,7 @@
               GitHub
             </a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="https://drive.google.com/file/d/152PYgxuluLotRakSKk2Z7aKPEF7p-GI2/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
+            <a href="https://drive.google.com/file/d/1UzupWtqJoo0FdOtAPjIJ7P5dhvTLwLIq/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
               CV
             </a>
           </p>
@@ -97,23 +97,25 @@
       I have a strong background in applied machine learning, algorithms, and foundation models. My aspirations revolve around generative foundation models and multimodal learning. With a passion for democratizing access to technology, much of my work is about developing intentional, adaptive agents capable of interpreting and interacting with the physical world in shared environments.
     </p>
     <p style="margin: 0px; font-size:16px;">
-      My coursework includes <strong>Applied Machine Learning, Algorithms, Human-Robot Interaction, Natural Language Processing, Computer Vision, and Data Science.</strong>          </p>
+      My coursework includes <strong>Applied Machine Learning, Algorithms, Human-Robot Interaction, Natural Language Processing, Computer Vision, Data Science, Deep Learning, Systems and Architecture, and Machine Learning Engineering.</strong>          </p>
 
-    <p style="margin:5px 0; font-size:16px;">
-      I have previously interned at <a href="https://www.jpmorganchase.com" style="color:#1772d0; text-decoration:none;">JP Morgan & Chase</a>,
-      worked as a research assistant at <a href="https://www.tcs.com/what-we-do/research" style="color:#1772d0; text-decoration:none;">Tata Research and Development Center (TCS)</a>, and served as a Machine Learning Engineer intern at  <a href="https://rezoomex.com" style="color:#1772d0; text-decoration:none;">Rezoomex (AI Startup)</a>.
-    </p>
+      <p style="margin:5px 0; font-size:16px;">
+        I have previously interned at <a href="https://amazon.jobs/content/en/teams/fgbs/finance-automation" style="color:#1772d0; text-decoration:none;">Amazon (Finance Automation)</a>, 
+        <a href="https://www.jpmorganchase.com" style="color:#1772d0; text-decoration:none;">J.P. Morgan & Chase</a>, 
+        <a href="https://www.tcs.com/what-we-do/research" style="color:#1772d0; text-decoration:none;">Tata Research & Development Center (TCS)</a>, and 
+        <a href="https://rezoomex.com" style="color:#1772d0; text-decoration:none;">Rezoomex (AI startup, acquired)</a>.
+      </p>
   </div>
 
   <div  id='ts' class="section">
     <h2>Technical Skills</h2>
     <ul class="skills-list">
-      <li><strong>Programming Languages:</strong> Python, C++, Java, JavaScript</li>
+      <li><strong>Programming Languages:</strong> Python, C++, Java, Kotlin, TypeScript</li>
       <li><strong>Databases:</strong> MySQL, MongoDB, Cassandra</li>
       <li><strong>Deep Learning:</strong> PyTorch, TensorFlow, CUDA</li>
       <li><strong>Data:</strong> Apache (Spark, Kafka), BigQuery, Hadoop</li>
       <li><strong>Machine Learning:</strong> RecSys, Classification, Clustering, DNNs (MLP, Multi-Tower networks, Transformers, Diffusion models)</li>
-      <li><strong>MLOps:</strong> Docker, Kubernetes, Airflow, GCP</li>
+      <li><strong>MLOps:</strong> Docker, Kubernetes, Airflow, GCP, AWS</li>
     </ul>
   </div>
 
@@ -178,12 +180,33 @@
 </div>
 <div id='proj' class="section">
   <h2>Projects</h2>
+  <div class="project">
+    <img src="images/nlp.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Language-to-SQL Generation using T5 Fine-Tuning and LLM Prompting</strong></p>
+      <p><em>May 2025</em></p>
+      <a href="https://github.com/gandhi-shubh02/Language-to-SQL-Generation-using-T5-Fine-Tuning-and-LLM-Prompting/tree/main">GitHub Repository</a>
+
+      <p>Built a natural language to SQL translation system on the ATIS flight booking dataset using three approaches: fine-tuning a pre-trained T5 encoder-decoder, training the same architecture from scratch, and designing zero- and few-shot prompts for in-context learning with instruction-tuned Gemma LLMs. Explored the impact of tokenizer design, parameter freezing, and data preprocessing on performance. Conducted ablation analysis on prompt design and evaluated models using Record-level F1, SQL Exact Match, and execution-based metrics.</p>
+    </div>
+  </div>
+
+  <div class="project">
+    <img src="images/cvd.jpg" alt="Project">
+    <div>
+      <p class="papertitle"><strong>Image Generation and Editing with Diffusion Models (DeepFloyd, DDPM)</strong></p>
+      <p><em>April 2025</em></p>
+      <a href="https://github.com/gandhi-shubh02/Image-Generation-and-Editing-with-Diffusion-Models">GitHub Repository</a>
+
+      <p>Implemented and deployed image generation pipelines using pre-trained DeepFloyd IF and a custom-trained DDPM. Developed forward and reverse sampling loops to support denoising, inpainting, text-guided editing,image-to-image translation, and visual illusions. Trained a time- and class-conditioned UNet on MNIST, achieving high visual fidelity across noise levels and out-of-distribution samples. Enhanced generation quality through classifier-free guidance and optimized denoising with strided schedules.</p>
+    </div>
+  </div>
 
   <div class="project">
     <img src="images/hybrid.jpg" alt="Project">
     <div>
       <p class="papertitle"><strong>Computer Vision Projects</strong></p>
-      <p><em>Jan 2025 - Present</em></p>
+      <p><em>January 2025 - May 2025</em></p>
       <a href="https://github.com/gandhi-shubh02/SeamCarving">GitHub Repository</a>
 
       <p>Worked on various computer vision tasks including Hybrid Images, Feature Detection & Matching, Seam Carving, and Panorama Stitching.</p>
