--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
               GitHub
             </a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="https://drive.google.com/file/d/1B0I0I7_G4URqEBqVYR7X3emm_MZUaQng/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
-              CV
+            <a href="https://drive.google.com/file/d/1gckBr5edEuq7iQw96RntzZw5aTza9IuF/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
+              Resume
             </a>
           </p>
           <img src="images/cornell.png" alt="Brand Logo" style="max-width:70%; height:auto; margin-top: 20px;">
