--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               GitHub
             </a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="https://drive.google.com/file/d/1gckBr5edEuq7iQw96RntzZw5aTza9IuF/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
+            <a href="https://drive.google.com/file/d/14vu2djbFT5Zoa1e-x6aoGOMSOFuULR9L/view?usp=sharing" style="color:#1772d0; text-decoration:none; font-size:14px;">
               Resume
             </a>
           </p>
