--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               GitHub
             </a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="https://drive.google.com/file/d/1x79KnM1vvKsTcc5iat0OSMwS5nqX6ytA/view?usp=sharing" style="color:#1772d0; text-decoration:none; font-size:14px;">
+            <a href="https://drive.google.com/file/d/1FN8yirWAEVTvEFPNO9lASWaEQsKx24WN/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
               Resume
             </a>
           </p>
