--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div id='ex' class="section">
     <h2>About</h2>
     <p style="margin:5px 0; font-size:16px;">
-      I have a strong background in applied machine learning, algorithms, and foundation models. My aspirations revolve around generative foundation models and multimodal learning. With a passion for democratizing access to technology, much of my work is about developing intentional, adaptive agents capable of interpreting and interacting with the physical world in shared environments.
+      I have a strong background in machine learning, distributed systems, and foundational models. Much of my work focuses on building scalable, end-to-end multimodal AI solutions guided by human-centered principles. With a passion for democratizing access to technology, my aspirations revolve around laying the groundwork for the next generation of customer-centric intelligent systems.
     </p>
     <p style="margin: 0px; font-size:16px;">
       My coursework includes <strong>Applied Machine Learning, Algorithms, Human-Robot Interaction, Natural Language Processing, Computer Vision, Data Science, Deep Learning, Systems and Architecture, and Machine Learning Engineering.</strong>          </p>
