--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
               GitHub
             </a>
             &nbsp;&nbsp;|&nbsp;&nbsp;
-            <a href="https://drive.google.com/file/d/1O8QWQpxZWh58A4l0mT62TqwysNYTCJM6/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
+<!--             <a href="https://drive.google.com/file/d/1O8QWQpxZWh58A4l0mT62TqwysNYTCJM6/view?usp=share_link" style="color:#1772d0; text-decoration:none; font-size:14px;">
               Resume
-            </a>
+            </a> -->
           </p>
           <img src="images/cornell.png" alt="Brand Logo" style="max-width:70%; height:auto; margin-top: 20px;">
 
